<resources>
    <string name="app_name">TO-DO App</string>
    <string name="complete">Выполнено: </string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="close">close</string>
    <string name="save">Сохранить</string>
    <string name="whatNeed">Что нужно сделать?</string>
    <string name="importance">Важность</string>
    <string name="no">нет</string>
    <string name="complete_before">Сделать до</string>
    <string name="my_tasks">Мои дела</string>
    <string name="navigatotoadd">navigatoToAdd</string>
    <string name="importanceicon">importanceIcon</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="deleted">"Удален "</string>
    <string name="undo">Вернуть</string>
    <string name="failed_to_login">Не удалось авторизироваться</string>
    <string name="loading_failed_showing_local_data">Нет соединения с сетью. Загрузка локальных данных</string>
    <string name="available_network_state">Сеть найдена, обновление данных</string>
    <string name="success_update">Данные обновлены</string>
    <string name="auth_yandex">Войти с Яндекс ID</string>
    <string name="auth">Вход</string>
    <string name="auth_guest">Войти автономно</string>
    <string name="unknown_exc">Неизвестная ошибка, пробуем снова</string>
    <string name="bad_exc">Нет соединения с сервером</string>
    <string name="client_exc">Проблема с клиентом, пробуем снова</string>
    <string name="not_found_exc">Элемент не найден, пробуем снова</string>
    <string name="sync_exc">Ошибка синхронизации, пробуем снова</string>
    <string name="net_exc">Проблема с соединением, пробуем снова</string>
    <string name="update_exc">Ошибка при обновлении</string>
    <string name="choose_data">Укажите дату</string>
    <string name="or">или</string>
    <string name="postpone_for_a_day">Отложить на день</string>
    <string name="notification_text">Your notification is %1$s and importance is %2$s</string>
</resources>