<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".screen.todoaddedititem.AddEditItemFragment">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/addeditButtonClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="#00000000"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close"
            app:tint="@color/invert" />

        <TextView
            android:id="@+id/addeditButtonSave"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/TodoDescribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_background"
                android:gravity="top"
                android:hint="@string/whatNeed"
                android:minLines="3"
                android:padding="16dp"
                tools:text="@tools:sample/lorem"
                android:importantForAutofill="no"
                android:inputType="text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:background="@drawable/list_background"
                android:clipToPadding="false"
                android:padding="16dp">

                <TextView
                    android:id="@+id/importancetextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/importance"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/importanceToggleGroup"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    app:checkedButton="@+id/ImportanceMiddle"
                    app:layout_constraintBottom_toBottomOf="@+id/importancetextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/importancetextView"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/ImportanceLow"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:icon="@drawable/ic_arrow_down" />

                    <Button
                        android:id="@+id/ImportanceMiddle"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:text="@string/no"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/ImportanceHigh"

                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:icon="@drawable/ic_warning" />


                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/firstAddEditDivider"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/importancetextView" />

                <TextView
                    android:id="@+id/completeBeforeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/complete_before"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/firstAddEditDivider" />

                <TextView
                    android:id="@+id/addEditDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:paddingVertical="4dp"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/completeBeforeTextView"
                    app:layout_constraintTop_toBottomOf="@+id/completeBeforeTextView"
                    tools:text="26 октября 2002" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/completeBeforeSwith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/completeBeforeTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/completeBeforeTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                style="@style/Widget.Material3.Button.TonalButton"
                android:id="@+id/addEditDeleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_background"
                app:backgroundTint="@null"
                android:gravity="center"
                android:padding="16dp"
                android:enabled="false"
                android:text="@string/delete"
                android:textSize="18sp"
                android:clickable="false"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>